<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.workActivity.WorkActivity">

    <TextView
            android:text="@string/text_tv_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/tv_task" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/text_tv_v1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/tv_text_v1"
            app:layout_constraintBaseline_toBaselineOf="@+id/ed_enter_v1"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ed_enter_v1"
            app:layout_constraintStart_toEndOf="@+id/tv_text_v1" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_task" android:autofillHints=""/>
    <Button
            android:text="@string/text_btn_check"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_check_v1" app:layout_constraintStart_toEndOf="@+id/ed_enter_v1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/ed_enter_v1"/>
    <Button
            android:text="@string/text_btn_help"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_hepl_v1" app:layout_constraintStart_toEndOf="@+id/btn_check_v1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_check_v1"/>
    <Button
            android:text="@string/text_btn_sound"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_sound_v1" app:layout_constraintStart_toEndOf="@+id/btn_hepl_v1"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_hepl_v1"/>
    <TextView
            android:text="@string/text_tv_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/tv_text_v2"
            app:layout_constraintBaseline_toBaselineOf="@+id/ed_enter_v2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ed_enter_v2"
            app:layout_constraintStart_toEndOf="@+id/tv_text_v2" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_enter_v1"/>
    <Button
            android:text="@string/text_btn_check"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_check_v2" app:layout_constraintStart_toEndOf="@+id/ed_enter_v2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/ed_enter_v2"/>
    <Button
            android:text="@string/text_btn_help"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_hepl_v2" app:layout_constraintStart_toEndOf="@+id/btn_check_v2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_check_v2"/>
    <Button
            android:text="@string/text_btn_sound"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_sound_v2" app:layout_constraintStart_toEndOf="@+id/btn_hepl_v2"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_hepl_v2"/>
    <TextView
            android:text="@string/text_tv_v3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/tv_text_v3"
            app:layout_constraintBaseline_toBaselineOf="@+id/ed_enter_v3"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/ed_enter_v3"
            app:layout_constraintStart_toEndOf="@+id/tv_text_v2" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_enter_v2"/>
    <Button
            android:text="@string/text_btn_check"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_check_v3" app:layout_constraintStart_toEndOf="@+id/ed_enter_v3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/ed_enter_v3"/>
    <Button
            android:text="@string/text_btn_help"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_hepl_v3" app:layout_constraintStart_toEndOf="@+id/btn_check_v3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_check_v3"/>
    <Button
            android:text="@string/text_btn_sound"
            android:layout_width="40dp"
            android:layout_height="44dp"
            android:id="@+id/btn_sound_v3" app:layout_constraintStart_toEndOf="@+id/btn_hepl_v3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_hepl_v3"/>
    <Button
            android:text="@string/text_btn_next_task"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/btn_next_task" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_enter_v3"/>
</androidx.constraintlayout.widget.ConstraintLayout>